[gd_scene load_steps=7 format=3 uid="uid://3qtdh0k88n7i"]

[ext_resource type="Script" path="res://Scripts/Skills/witch_fog.gd" id="1_jep4q"]
[ext_resource type="Texture2D" uid="uid://oov3qeqnyjho" path="res://Assets/Images/Effects/smoke_particle.png" id="3_ts0nt"]
[ext_resource type="Script" path="res://Scripts/DefenceTowers/skill_particle_shooter.gd" id="3_ydeu1"]
[ext_resource type="AudioStream" uid="uid://ctoyd6s36hmkq" path="res://Assets/Sounds/FXs/DefenceTowers/WitchTower/fog.mp3" id="4_g3swa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i42up"]
radius = 73.9444

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_etniu"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(60, 20, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, -100, 0)
scale_min = 0.4

[node name="WitchFog" type="Area2D"]
collision_layer = 0
collision_mask = 120
script = ExtResource("1_jep4q")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 0.7)
shape = SubResource("CircleShape2D_i42up")
debug_color = Color(0, 1, 1, 0.137255)

[node name="SkillParticleShooter" type="GPUParticles2D" parent="."]
process_mode = 3
modulate = Color(0, 0.384314, 0, 0.180392)
z_index = 1
y_sort_enabled = true
amount = 160
process_material = SubResource("ParticleProcessMaterial_etniu")
texture = ExtResource("3_ts0nt")
fixed_fps = 60
script = ExtResource("3_ydeu1")

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="FogAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_g3swa")
volume_db = -4.0
bus = &"Sound"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
